# fordjent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_REVIEW_ANALYSIS.md  DESIGN.md  Dockerfile  Makefile  NEXT_SESSION_PLAN.md  PLAN.md  README.md  RECOVERY_PLAN.md  deploy-local.sh  deploy.sh  docker-compose.local.yaml  docker-compose.yaml  fj  fj-README.md  fordjent.local.yaml  fordjent.macos.yaml  fordjent.yaml  go.mod  go.sum  latest-plan.md  latest-review.md
.forgejo/workflows/: ci.yaml
cmd/fj/: main.go
cmd/fordjent/: main.go
deploy/: README.md  env.sh  pyproject.toml
deploy/cloud/: Caddyfile  docker-compose.yaml  fordjent.yaml  forgejo.app.ini
deploy/src/fordjent_deploy/: cli.py  config.py  gandi_dns.py  provision.py  scaleway_api.py
docs/: CLAIMS.schema.md  deploy-fixes-plan.md  deployment.md  eval-harness-local.md  eval-harness.md  eval-results.md  noise-reduction-plan.md  reliable-agent-plan.md  telegram-plan.md
docs/diagrams/: coordination.dot  event-flow.dot  lifecycle.dot  pr-pipeline.dot
internal/agent/: context.go  context_test.go  turn.go
internal/autoreg/: autoreg.go  autoreg_test.go
internal/config/: config.go  config_test.go
internal/cost/: cost.go  cost_test.go
openspec/: config.yaml
outputs/: intelligence-phase-research.md  intelligence-phase-research.provenance.md  review-architecture.md  review-code-quality.md  review-security.md  review-testing.md
scripts/: bootstrap-local.sh  cloud-bootstrap.sh  entrypoint.sh  fordjent.service  loopcop.sh  teardown-local.sh
skills/: reliable-agent-integration.md
(+112 files in other folders)
