[project]
name = "fordjent-deploy"
version = "0.1.0"
description = "Deploy Forgejo + Fordjent to Scaleway with TLS"
requires-python = ">=3.12"
dependencies = [
    "scaleway>=2.0.0",
    "paramiko>=3.5.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.scripts]
fordjent-deploy = "fordjent_deploy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fordjent_deploy"]